Kubernetes/Chart/templates/ingress-gurenich-v1.yaml
#ВЫбираем api версию для работы с ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
#прпоисываем dns, по которому мы сможем получить доступ
  - host: www.gurenich-a.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
#Имя нашего сервиса в kubernetes
            name: php-service
            port:
              number: 80
